--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ highlighter: pygments
 title: Hysterical
 description: 人生到处知何似，应似飞鸿踏雪泥
 theme: kunka
-disqusname: jeromememory
+disqusname: minixalpha
 
 # theme can be: hack, leap-day, merlot, midnight, minimal, modernist, slate, time-machine, kunka
 # those themes are all come from GitHub Pages Themes
